[package]
name = "sysblas"
version = "0.1.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Minimal CBLAS FFI bindings to system BLAS"
repository = "https://github.com/peterhj/sysblas"
documentation = "https://docs.rs/sysblas"
readme = "README.md"
keywords = ["blas", "cblas"]
